// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkNavigationBarTextButtonIOS should render correctly 1`] = `
<View
  accessibilityLabel="Edit"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 8,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
          },
        ],
      ]
    }
  >
    Edit
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarTextButtonIOS should render correctly disabled 1`] = `
<View
  accessibilityLabel="Done"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 8,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(178, 174, 189)",
          },
        ],
      ]
    }
  >
    Done
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarTextButtonIOS should render correctly emphasize 1`] = `
<View
  accessibilityLabel="Done"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 8,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {
          "fontWeight": "500",
        },
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
          },
        ],
      ]
    }
  >
    Done
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarTextButtonIOS should render correctly leading configuration 1`] = `
<View
  accessibilityLabel="Cancel"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginStart": 8,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {},
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
          },
        ],
      ]
    }
  >
    Cancel
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarTextButtonIOS should resepect "disabledTintColor" 1`] = `
<View
  accessibilityLabel="Done"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 8,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {},
        Array [
          Object {
            "color": "red",
          },
        ],
      ]
    }
  >
    Done
  </Text>
</View>
`;

exports[`iOS BpkNavigationBarTextButtonIOS should resepect "tintColor" 1`] = `
<View
  accessibilityLabel="Done"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "marginEnd": 8,
      "opacity": 1,
      "zIndex": 2,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {},
        Array [
          Object {
            "color": "red",
          },
        ],
      ]
    }
  >
    Done
  </Text>
</View>
`;
